# auth-notes

./: .dockerignore  .env  .env_docker  .env_test  .env_test_docker  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  deny.toml  docker-compose.full.yml  docker-compose.yml  push_to_ecr.sh
docs/: api-docs.md
src/: lib.rs  main.rs
src/api/: error.rs  extractors.rs  mod.rs  server.rs  version.rs
src/api/handlers/: auth_handlers.rs  mod.rs  note_handlers.rs  stats_handlers.rs  user_handlers.rs
src/api/routes/: auth_routes.rs  mod.rs  note_routes.rs  stats_routes.rs  user_routes.rs
src/application/: app.rs  config.rs  constants.rs
src/application/repository/: account_repo.rs  mod.rs  note_repo.rs  stats_repo.rs  transaction_repo.rs  user_repo.rs
src/application/security/: roles.rs
src/application/service/: mod.rs  transaction_service.rs
src/domain/models/: account.rs  mod.rs  note.rs  stats.rs  transaction.rs  user.rs
src/infrastructure/database/: database.rs  mod.rs
src/infrastructure/database/postgres/: options.rs  postgres.rs
src/infrastructure/database/postgres/migrations/: 20231113222801_db.sql  20250115163600_users.sql  20250505180713_notes.sql  20250511102352_stats.sql
tests/: auth_expire_tests.rs  auth_login_test.rs  auth_logout_test.rs  auth_refresh_tests.rs  auth_revoke_tests.rs  endpoints.http  health_test.rs  user_tests.rs  version_test.rs
tests/common/: auth.rs  constants.rs  error.rs  helpers.rs  hyper_fetch.rs  mod.rs  root.rs  test_app.rs  users.rs
